Pyglet 1.4.2
Bugfix and cleanup release.

Improvements
------------
- Removed broken projects from /contrib
- Update setup.py with project_urls and long_description.

Bugfixes
--------
- Fix invalid argtype in image GDIplus decoder.


Pyglet 1.4.1
============
Bugfix release.

Bugfixes
--------
- #256 Fix aliases for Window.get_viewport_size/get_framebuffer_size.


Pyglet 1.4.0
============
Major release adding several new features and removing some long deprecated methods and attributes.
There are also many small bugfixes, and documentation corrections. Thanks to everyone who submitted
a pull request or contributed towards this release!

Of special note, is that the 1.4 release will be the last to support Python 2. It will also be the
last release to support Legacy OpenGL (2.x). Future pyglet releases will be Python 3 only, and will
require at least OpenGL 3 support. If you are using pyglet on legacy systems, don't worry. The 1.4
branch will remain available for download. Bugfixes will be backported as long as someone is willing
to do so, but new fetures on the 1.4 branch are unlikely.

New features
------------
- Added preliminary support for loading 3D models from obj files.
- Switched from avbin to ffmpeg for decoding media files.

Improvements
------------
- Many long deprecated methods and attributes have now been removed. These are all small
  changes, so updating an old codebase is straightforward. The following items were removed:
    * `sprite.set_position`. Set the X, Y coordinates via `sprite.position` instead.
    * `next` on the Player class. This has been replaced by `next_source`.
    * `clock.ClockDisplay`. Use `window.FPSDisplay` instead.
    * `clock.test_clock`. This relied on deprecated behavior, and is superseded by unit tests.
    * `font.text`. Use the `text` module instead for displaying text.
    * `window.Platform` API. Use `canvas.get_display` or `canvas.Display` instead.