@@ -46,7 +46,7 @@ __version__ = '$Id: $'
 import sys
 from pyglet.event import EventDispatcher
 
-_is_epydoc = hasattr(sys, 'is_epydoc') and sys.is_epydoc
+_is_pyglet_doc_run = hasattr(sys, "is_pyglet_doc_run") and sys.is_pyglet_doc_run
 
 
 class DeviceException(Exception):
@@ -171,7 +171,7 @@ class Control(EventDispatcher):
         else:
             return '%s(raw_name=%s)' % (self.__class__.__name__, self.raw_name)
 
-    if _is_epydoc:
+    if _is_pyglet_doc_run:
         def on_change(self, value):
             """The value changed.
 
@@ -274,7 +274,7 @@ class Button(Control):
         else:
             self.dispatch_event('on_release')
 
-    if _is_epydoc:
+    if _is_pyglet_doc_run:
         def on_press(self):
             """The button was pressed.
 
@@ -669,7 +669,7 @@ class TabletCanvas(EventDispatcher):
         """
         raise NotImplementedError('abstract')
 
-    if _is_epydoc:
+    if _is_pyglet_doc_run:
         def on_enter(self, cursor):
             """A cursor entered the proximity of the window.  The cursor may
             be hovering above the tablet surface, but outside of the window
