@@ -9,6 +9,7 @@ Improvements
 Bugfixes
 --------
 - Fix invalid argtype in image GDIplus decoder.
+- Change sys.is_epydoc to sys.is_pyglet_doc_run to prevent crashing with Anaconda, etc. (#9)
 
 
 Pyglet 1.4.1
